Fixed overflow issue on non mobile devices

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -55,6 +55,10 @@ header.is_about_detail.is_scrolled {
 	-webkit-transform: translate3d(100%, 0, 0);
 	-o-transform: translate3d(100%, 0, 0);
 
+	@include media('md') {
+		overflow: hidden;
+	}
+
 	@include media('lg') {
 		padding: 8em 8em 4em;
 	}
